@@ -6746,7 +6746,39 @@ operator|.
 name|incrAuthenticationFailures
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|LOG
+operator|.
+name|isDebugEnabled
+argument_list|()
+condition|)
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+name|StringUtils
+operator|.
+name|stringifyException
+argument_list|(
+name|e
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 comment|// attempting user could be null
+name|IOException
+name|tce
+init|=
+operator|(
+name|IOException
+operator|)
+name|getTrueCause
+argument_list|(
+name|e
+argument_list|)
+decl_stmt|;
 name|AUDITLOG
 operator|.
 name|warn
@@ -6769,17 +6801,18 @@ operator|.
 name|getLocalizedMessage
 argument_list|()
 operator|+
+literal|") with true cause: ("
+operator|+
+name|tce
+operator|.
+name|getLocalizedMessage
+argument_list|()
+operator|+
 literal|")"
 argument_list|)
 expr_stmt|;
 throw|throw
-operator|(
-name|IOException
-operator|)
-name|getTrueCause
-argument_list|(
-name|e
-argument_list|)
+name|tce
 throw|;
 block|}
 if|if
