@@ -1070,6 +1070,9 @@ Release 2.7.0 - UNRELEASED
     HADOOP-11686. MiniKDC cannot change ORG_NAME or ORG_DOMAIN.
     (Duo Zhang via wheat9)
 
+    HADOOP-11692. Improve authentication failure WARN message to avoid user
+    confusion. (Yongjun Zhang)
+
 Release 2.6.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
